--- a/16 - Calculator App/CSS/style.css
+++ b/16 - Calculator App/CSS/style.css
@@ -24,8 +24,8 @@
 
 @media (min-width: 45em) {
     :root {
-        --font-size-100: 1.5rem;
         --font-size-200: 2rem;
+        --font-size-100: 1.5rem;
     }
 }
 
@@ -72,7 +72,13 @@ body {
 
 .grid {
     display: grid;
-    gap: 1.5rem;
+    gap: 0.75rem;
+}
+
+@media (min-width: 45em) {
+    .grid {
+        gap: 1.5rem;
+    }
 }
 
 .grid-4-columns {
@@ -97,7 +103,7 @@ body {
 
 /* Calculator Section */
 .container {
-    max-width: 50rem;
+    max-width: 35rem;
 }
 .calculator-header {
     padding-inline: 1rem;
@@ -110,7 +116,7 @@ body {
 
 .output-box {
     background-color: var(--screen-background);
-    padding: 1.5rem 2rem;
+    padding: 0.75rem 1rem;
     color: var(--text-color-light);
     display: flex;
     justify-content: center;
@@ -120,23 +126,24 @@ body {
     border: none;
     font-size: var(--font-size-300);
     min-height: 6rem;
+    word-break: break-all;
 }
 
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-
-.output-text:focus {
-    outline: none;
+@media (min-width: 45em) {
+    .output-box {
+        padding: 1.5rem 2rem;
+    }
 }
 
 .buttons-box {
     background-color: var(--toggle-background);
-    padding: 2rem;
+    padding: 1rem;
+}
+
+@media (min-width: 45em) {
+    .buttons-box {
+        padding-inline: 2rem;
+    }
 }
 
 .buttons-box > button {
