--- a/16 - Calculator App/CSS/style.css
+++ b/16 - Calculator App/CSS/style.css
@@ -158,6 +158,13 @@ body {
     padding-inline: 1rem;
 }
 
+@media (min-width: 30em) {
+    .container {
+        min-width: 25rem;
+    }
+}
+
+
 @media (min-width: 45em) {
     .container {
         max-width: 35rem;
@@ -292,7 +299,7 @@ input[type='radio'] {
 
 @media (min-width: 45em) {
     .buttons-box {
-        padding-inline: 2rem;
+        padding: 2rem;
     }
 }
 
