--- a/01_qr-code-component/css/style.css
+++ b/01_qr-code-component/css/style.css
@@ -48,7 +48,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    padding: 0rem 0.5rem;
+    padding: 0 0.5rem;
 }
 
 .image {
