--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -1,6 +1,7 @@
 .container {
-    max-width: 80rem;
+    max-width: 30rem;
     padding-inline: 1rem;
+    margin: 0 auto;
 }
 
 /* Layouts */
@@ -49,6 +50,15 @@
     font-size: var(--font-size-100);
 }
 
+/* Font weight*/
+.font-weight-bold {
+    font-weight: var(--font-weight-bold);
+}
+
+.font-weight-medium {
+    font-weight: var(--font-weight-medium);
+}
+
 /* Background*/
 .background-light-blue {
     background-color: var(--light-blue);
@@ -56,6 +66,10 @@
 
 .background-light-yellow {
     background-color: var(--light-yellow);
+}
+
+.background-semi-dark-navy {
+    background-color: var(--semi-dark-navy);
 }
 
 .background-dark-navy {
@@ -69,6 +83,14 @@
 
 .text-color-dark-navy {
     color: var(--dark-navy);
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.text-align-center {
+    text-align: center;
 }
 
 
