--- a/17-tic_tac_toe_game/css/style.css
+++ b/17-tic_tac_toe_game/css/style.css
@@ -22,6 +22,7 @@
     --semi-dark-navy: hsl(199, 35%, 19%);
     --silver: hsl(198, 23%, 72%);
     --silver-hover: hsl(197, 33%, 89%);
+    --rawSilver: 198, 23%, 72%;
 }
 
 @media (min-width: 48em) {
@@ -60,10 +61,41 @@ body {
 }
 
 
-.choice-button {
+/* Choice Selection Section */
+.mark-selection-wrapper {
+    padding: 2rem 2rem;
+}
+
+.choice-container {
+    min-width: 25rem;
+}
+
+.choice__logo-container {
+    margin-bottom: 3rem;
+}
+
+.mark-selection__buttons {
+    padding: 0.5rem;
+}
+
+.mark-selection__button {
     display: block;
-    min-width: 5rem;
-    min-height: 5rem;
-    border: 1px solid black;
-    background-color: lightgrey;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0.5rem 2rem;
+    border-radius: 0.5rem;
+
+}
+
+.mark-selection__active-button {
+    background-color: var(--silver);
+}
+
+.mark-selection__button img {
+    max-width: 30% !important;
+}
+
+.mark-selection-wrapper p:last-child {
+    color: hsl(var(--rawSilver), 0.4);
 }
