--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -4,9 +4,21 @@
     margin: 0 auto;
 }
 
+/* Spacing */
+.flow > * + * {
+    margin-top: 1rem;
+}
+
+.margin-auto {
+    margin: auto;
+}
 /* Layouts */
 .grid {
     display: grid;
+}
+
+.grid-2-columns {
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .grid-3-columns {
@@ -15,6 +27,10 @@
 
 .flex {
     display: flex;
+}
+
+.flex-direction-column {
+    flex-direction: column;
 }
 
 .flex-align-center {
