--- a/17-tic_tac_toe_game/css/utility.css
+++ b/17-tic_tac_toe_game/css/utility.css
@@ -1,17 +1,25 @@
 .container {
     max-width: 30rem;
-    padding-inline: 1rem;
+    padding: 1rem;
     margin: 0 auto;
 }
 
 /* Spacing */
 .flow > * + * {
-    margin-top: 1rem;
+    margin-top: 1.25rem;
 }
 
 .margin-auto {
     margin: auto;
 }
+
+/* Buttons */
+.btn {
+    padding: 0.75rem 1rem;
+    border: none;
+    cursor: pointer;
+}
+
 /* Layouts */
 .grid {
     display: grid;
@@ -109,4 +117,8 @@
     text-align: center;
 }
 
+/* Border Radius */
+.border-radius {
+    border-radius: 0.5rem;
+}
 
